# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/common_event_service/event.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

cflags = [
  "-fno-math-errno",
  "-fno-unroll-loops",
  "-fmerge-all-constants",
  "-fno-ident",
  "-Oz",
  "-flto",
  "-ffunction-sections",
  "-fdata-sections",
]

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("ani_commoneventmanager") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${interfaces_path}/kits/ani/common_event/include",
    "${interfaces_path}/kits/napi/napi_common_event/include",
    "${ces_core_path}/include",
  ]

  configs = [ ":native_module_config" ]

  sources = [
    "src/ani_common_event.cpp",
    "src/ani_common_event_utils.cpp",
  ]

  deps = [
    "${ces_native_path}:cesfwk_innerkits",
    "${interfaces_path}/kits/napi/napi_common_event:napi_commoneventmanager",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ani_common",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]

  subsystem_name = "notification"
  part_name = "common_event_service"
}

generate_static_abc("common_event_manager") {
  base_url = "./ets"
  files = [ "./ets/@ohos.commonEventManager.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/common_event_manager.abc"
}

ohos_prebuilt_etc("common_event_manager_etc") {
  source = "$target_out_dir/common_event_manager.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":common_event_manager" ]
}

generate_static_abc("commonEventData") {
  base_url = "./ets"
  files = [ "./ets/commonEvent/commonEventData.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/commonEventData.abc"
}

ohos_prebuilt_etc("commonEventData_etc") {
  source = "$target_out_dir/commonEventData.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":commonEventData" ]
}

generate_static_abc("commonEventPublishData") {
  base_url = "./ets"
  files = [ "./ets/commonEvent/commonEventPublishData.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/commonEventPublishData.abc"
}

ohos_prebuilt_etc("commonEventPublishData_etc") {
  source = "$target_out_dir/commonEventPublishData.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":commonEventPublishData" ]
}

generate_static_abc("commonEventSubscribeInfo") {
  base_url = "./ets"
  files = [ "./ets/commonEvent/commonEventSubscribeInfo.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/commonEventSubscribeInfo.abc"
}

ohos_prebuilt_etc("commonEventSubscribeInfo_etc") {
  source = "$target_out_dir/commonEventSubscribeInfo.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":commonEventSubscribeInfo" ]
}

generate_static_abc("commonEventSubscriber") {
  base_url = "./ets"
  files = [ "./ets/commonEvent/commonEventSubscriber.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/commonEventSubscriber.abc"
}

ohos_prebuilt_etc("commonEventSubscriber_etc") {
  source = "$target_out_dir/commonEventSubscriber.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":commonEventSubscriber" ]
}

generate_static_abc("static_subscriber_extension_ability") {
  base_url = "./ets"
  files = [ "./ets/@ohos.application.StaticSubscriberExtensionAbility.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/static_subscriber_extension_ability.abc"
}

ohos_prebuilt_etc("static_subscriber_extension_ability_abc_etc") {
  source = "$target_out_dir/static_subscriber_extension_ability.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":static_subscriber_extension_ability" ]
}

generate_static_abc("static_subscriber_extension_context") {
  base_url = "./ets"
  files = [ "./ets/@ohos.application.StaticSubscriberExtensionContext.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/static_subscriber_extension_context.abc"
}

ohos_prebuilt_etc("static_subscriber_extension_context_abc_etc") {
  source = "$target_out_dir/static_subscriber_extension_context.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "common_event_service"
  deps = [ ":static_subscriber_extension_context" ]
}
