# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/common_event_service/event.gni")
import("//build/test.gni")

module_output_path = "common_event_service/systemtest"

ohos_systemtest("ActsFuzzTest") {
  module_out_path = module_output_path
  resource_config_file = "${common_event_service_path}/test/systemtest/common/resource/fuzzTest/ohos_test.xml"

  sources = [
    "${common_event_service_path}/test/systemtest/common/resource/fuzzTest/src/fuzzTestManager.cpp",
    "${common_event_service_path}/test/systemtest/common/resource/fuzzTest/src/getparam.cpp",
    "actsFuzzTest.cpp",
  ]

  configs = [ "${common_event_service_path}/test/systemtest/common/ces:cesfwk_kits_test_config" ]

  include_dirs = [
    "//utils/native/base/include",
    "${common_event_service_path}/test/systemtest/common/resource",
    "//third_party/json/single_include",
    "${services_path}/include",
    "${aafwk_kits_path}/appkit/app/include",
    "${aafwk_inner_api_path}/ability_manager/include",
    "${aafwk_kits_path}/ability/native/include",
    "${aafwk_services_path}/abilitymgr/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  cflags = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${aafwk_inner_api_path}/ability_manager:ability_manager",
    "${aafwk_inner_api_path}/app_manager:app_manager",
    "${aafwk_kits_path}/ability/native:abilitykit_native",
    "${aafwk_kits_path}/appkit:appkit_native",
    "${aafwk_services_path}/abilitymgr:abilityms",
    "${ces_common_path}:libevent_common",
    "${ces_native_path}:cesfwk_innerkits",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  defines = [
    "APP_LOG_TAG = \"CesFwkKitsTest\"",
    "LOG_DOMAIN = 0xD002200",
  ]
  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]

  if (common_event_service_with_graphics) {
    external_deps += [ "input:libmmi-client" ]
  }
}

group("fuzzTest") {
  testonly = true

  deps = [ ":ActsFuzzTest" ]
}
